--- a/jelinkova-react/src/scss/_base/_variables.scss
+++ b/jelinkova-react/src/scss/_base/_variables.scss
@@ -11,7 +11,7 @@ $menu-break: 'lg';
 
 // barvy loga: #aa9071 + #ede7e1 #d3b0cf
 
-$font-family: 'Montserrat Alternates', sans-serif;
+$font-family: 'Montserrat Alternates', monospace;
 $font-family-title: 'Kaushan Script', cursive;
 
 $border: 8px;
