--- a/jelinkova-react/src/scss/_modules/_reference.scss
+++ b/jelinkova-react/src/scss/_modules/_reference.scss
@@ -26,13 +26,18 @@
         .reference-item-quote {
             svg {
                 position: absolute;
-                left: 0;
-                top: 0;
+                left: -10px;
+                top: -30px;
                 z-index: 0;
                 fill: $main-color;
                 opacity: 0.8;
                 max-height: 170px;
                 max-width: 170px;
+
+                @include media(xs) {
+                    top: 0;
+                    left: 0;
+                }
             }
         }
 
