--- a/jelinkova-react/src/scss/_modules/_top-image.scss
+++ b/jelinkova-react/src/scss/_modules/_top-image.scss
@@ -52,14 +52,18 @@
         .top-image-content {
             position: relative;
             z-index: 3;
-            padding: 10rem 0;
+            padding: 20rem 0 10rem 0;
             font-size: 19px;
             display: flex;
             align-items: center;
 
             @include media(lg) {
-                padding: 10rem 0 10rem 8rem;
+                padding: 20rem 0 10rem 8rem;
                 font-size: 24px;
+            }
+
+            @include media(xxl) {
+                padding: 10rem 0 10rem 8rem;
             }
 
             .top-image-content-inner {
