--- a/jelinkova-react/src/scss/_massages/_massages.scss
+++ b/jelinkova-react/src/scss/_massages/_massages.scss
@@ -8,9 +8,9 @@
     .massage-card-item-title {
         margin: 0 0 4rem 0;
     }
-    .massage-card-item-image {
+    // .massage-card-item-image {
         
-    }
+    // }
     .massage-card-item-content {
         max-width: 80rem;
     }
