--- a/jelinkova-react/src/scss/_modules/_reference.scss
+++ b/jelinkova-react/src/scss/_modules/_reference.scss
@@ -3,16 +3,19 @@
 }
 
 .reference-container {
-    display: grid;
-    grid-gap: 10rem;
-    grid-template-columns: 1fr 1fr 1fr;
+
+    @include media(md) {
+        display: grid;
+        grid-gap: 10rem;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 
     .reference-item {
         position: relative;
         padding: 7.5rem 0 5rem 5rem;
 
         @include media(md) {
-            padding: 7.5rem 0 0 5rem; 
+            padding: 7.5rem 0 0 5rem;
         }
 
         .reference-item-quote {
