--- a/jelinkova-react/src/scss/_base/_variables.scss
+++ b/jelinkova-react/src/scss/_base/_variables.scss
@@ -4,7 +4,8 @@ $main-color-dark: #bc81b6;
 $main-color-hover: #9f6599;
 //$minor-color: #f2b39a;
 $base-text: #323232;
-$color-line: #d3b0cf40;
+$color-line: #f5ebf4;
+//$color-line: #d3b0cf40;
 $base-black: #000;
 $base-white: #fff;
 $menu-break: 'lg';
