--- a/jelinkova-react/src/scss/_base/_header.scss
+++ b/jelinkova-react/src/scss/_base/_header.scss
@@ -19,6 +19,11 @@ header {
         position: relative;
         min-height: 66px;
 
+        @include media(lg) {
+            justify-content: space-between;
+            display: flex;
+        }
+
         &::after {
             content: '';
             position: absolute;
@@ -31,11 +36,6 @@ header {
 
         }
 
-        @include media(lg) {
-            justify-content: space-between;
-            display: flex;
-        }
-
         .header-logo {
             padding: .5rem 1rem;
             background-color: $base-white;
@@ -43,71 +43,72 @@ header {
             z-index: 1;
 
             a {
-                display: flex;
-                height: max-content;
+                display: block;
 
                 img {
                     max-height: 8rem;
                     min-height: 8rem;
+                    height: 8rem !important;
                 }
             }
         }
 
         .header-menu {
             position: absolute;
-            top: 100%;
-            left: 0;
-            width: 100%;
+            top: calc(100% - 1rem);
+            left: 2rem;
+            width: calc(100% - 4rem);
             display: none;
             z-index: 5;
             margin-left: auto;
-            justify-content: right;
-
-            //potrebuji sem dostat menu v respu s těmito styly: =>
-
-            // background-color: white;
-            // border-radius: 8px;
-            // box-shadow: 0 5px 20px 0 rgb(0 0 0 / 20%);
-            // max-width: 140rem;
-            // display: block;
+            background-color: #FCF7FC;
+            border-radius: 8px;
 
             @include media($menu-break) {
                 position: static;
+                top: 0;
+                left: 0;
+                width: 100%;
                 display: flex;
+                justify-content: flex-end;
+                background: transparent;
             }
 
             >ul {
-                display: flex;
-                margin: 0 2rem 0 auto;
-                list-style-type: none;
-                align-items: center;
-                flex-direction: column;
+                list-style: none;
 
                 @include media($menu-break) {
+                    display: flex;
                     flex-direction: row;
+                    margin: 0 2rem 0 auto;
                 }
 
                 >li {
-                    display: flex;
                     height: 100%;
-                    margin: 0 3rem;
-                    align-items: center;
                     position: relative;
+                    margin: 2rem 0 2rem 2rem;
+                    background-color: #FCF7FC;
+
+                    @include media($menu-break) {
+                        margin: 0 3rem;
+                    }
 
                     >a {
-                        display: flex;
-                        align-items: center;
+                        display: block;
                         color: $base-black;
                         text-decoration: none;
-                        background-color: $base-white;
-                        padding: 4px 1rem;
+                        background-color: transparent;
+                        padding: 6px 2rem;
                         font-weight: 400;
-                        text-align: center;
-                        font-size: 20px;
+                        font-size: clamp(17px, 2rem, 2rem);
                         letter-spacing: 1px;
                         transition: 300ms ease;
                         position: relative;
                         z-index: 1;
+
+                        @include media($menu-break) {
+                            background-color: $base-white;
+                        }
 
                         &:hover,
                         &:focus {
@@ -132,7 +133,6 @@ header {
 
 
                         >li {
-                            //background-color: #bb81bb;
                             list-style: none;
                             text-align: center;
 
@@ -243,8 +243,8 @@ header {
 
         .submenu-open {
             position: absolute;
-            top: 50%;
-            left: 50%;
+            top: 0%;
+            left: 96%;
             transform: translateX(-50%) translateY(calc(-50% + 18px));
             height: 20px;
             width: 20px;
@@ -252,12 +252,21 @@ header {
             border: 2px solid $color-line;
             z-index: 0;
             transition: 200ms ease;
+
+           @include media($menu-break) {
+            top: 50%;
+            left: 50%;            
+           }
         }
     }
 
     &.open {
         .header-menu {
-            display: flex;
+            display: block;
+
+            @include media($menu-break) {
+                display: flex;
+            }
         }
 
         .open-menu span {
@@ -291,6 +300,10 @@ header {
         display: block;
         align-items: center;
         align-self: center;
+        background-color: $base-white;
+        padding: 0.5rem 1rem;
+        position: relative;
+        z-index: 1;
 
         @include media($menu-break) {
             display: none;
@@ -321,7 +334,7 @@ header {
                 background-color: $base-black;
                 height: 4px;
                 border-radius: 2px;
-                width: 30px;
+                width: 6rem;
                 position: absolute;
                 top: -1.6rem;
             }
